Made BFS faster: cycle detection, ordering